--- a/prepros-6.config
+++ b/prepros-6.config
@@ -23,14 +23,17 @@
     {
       "path": "scss/base.scss",
       "imports": [
+        "scss/core/_basics.scss",
         "scss/core/_normalize.scss",
         "scss/core/_skeleton.scss",
-        "scss/core/_variables.scss"
+        "scss/core/_variables.scss",
+        "scss/content/_registry.scss",
+        "scss/content/_globals.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
