--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,7 +2,12 @@
   "name": "ricardoastudillo",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "scss/base.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    }
+  ],
   "fileTree": {
     "expandedDirs": [
       "scss"
