basic sections' styling

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -37,6 +37,11 @@
         "scss/components/_main_menu.scss",
         "scss/content/_globals.scss",
         "scss/content/_s_hero.scss",
+        "scss/content/_s_intro.scss",
+        "scss/content/_s_comunidades.scss",
+        "scss/content/_s_buzon.scss",
+        "scss/content/_s_reclutamiento.scss",
+        "scss/content/_foot.scss",
         "scss/components/animate/partials/_helpers.scss",
         "scss/components/animate/partials/_bounce.scss",
         "scss/components/animate/partials/_bounceIn.scss",
