--- a/prepros-6.config
+++ b/prepros-6.config
@@ -42,6 +42,7 @@
         "scss/content/_s_buzon.scss",
         "scss/content/_s_reclutamiento.scss",
         "scss/content/_foot.scss",
+        "scss/core/_functions.scss",
         "scss/components/animate/partials/_helpers.scss",
         "scss/components/animate/partials/_bounce.scss",
         "scss/components/animate/partials/_bounceIn.scss",
@@ -186,7 +187,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
