responsive layout adjustments

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -35,6 +35,7 @@
         "scss/components/animate/animate.scss",
         "scss/components/hamburgers/_hamburgers.scss",
         "scss/components/_main_menu.scss",
+        "scss/components/_unslider.scss",
         "scss/content/_globals.scss",
         "scss/content/_s_hero.scss",
         "scss/content/_s_intro.scss",
