Styling and visual components of all new sections

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -39,6 +39,13 @@
         "scss/content/_globals.scss",
         "scss/content/_s_hero.scss",
         "scss/content/_s_intro.scss",
+        "scss/content/_s_metropol.scss",
+        "scss/content/_s_movilidad.scss",
+        "scss/content/_cintillo_posible.scss",
+        "scss/content/_s_grande.scss",
+        "scss/content/_s_futuro.scss",
+        "scss/content/_s_verde.scss",
+        "scss/content/_s_medible.scss",
         "scss/content/_s_comunidades.scss",
         "scss/content/_s_buzon.scss",
         "scss/content/_s_reclutamiento.scss",
@@ -188,7 +195,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
