--- a/prepros-6.config
+++ b/prepros-6.config
@@ -46,6 +46,7 @@
         "scss/content/_s_futuro.scss",
         "scss/content/_s_verde.scss",
         "scss/content/_s_medible.scss",
+        "scss/content/_cintillo_frase.scss",
         "scss/content/_s_comunidades.scss",
         "scss/content/_s_buzon.scss",
         "scss/content/_s_reclutamiento.scss",
