--- a/prepros-6.config
+++ b/prepros-6.config
@@ -39,6 +39,7 @@
         "scss/content/_globals.scss",
         "scss/content/_s_hero.scss",
         "scss/content/_s_intro.scss",
+        "scss/content/_s_puntos.scss",
         "scss/content/_s_metropol.scss",
         "scss/content/_s_movilidad.scss",
         "scss/content/_cintillo_posible.scss",
