socialfeed.js implementation

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -36,6 +36,7 @@
         "scss/components/hamburgers/_hamburgers.scss",
         "scss/components/_main_menu.scss",
         "scss/components/_unslider.scss",
+        "scss/components/_social_feed.scss",
         "scss/content/_globals.scss",
         "scss/content/_s_hero.scss",
         "scss/content/_s_intro.scss",
