--- a/prepros-6.config
+++ b/prepros-6.config
@@ -37,6 +37,7 @@
         "scss/components/_main_menu.scss",
         "scss/components/_unslider.scss",
         "scss/components/_social_feed.scss",
+        "scss/components/_preloader.scss",
         "scss/content/_globals.scss",
         "scss/content/_s_hero.scss",
         "scss/content/_s_intro.scss",
